syntax = "proto3";
package auth;
option go_package = "github.com/Salladin95/card-quizzler-microservices/auth-service/auth";

message SignInPayload {
  string email = 1;
  string password = 2;
}

message SignUpPayload {
  string email = 1;
  string password = 2;
  string name = 3;
  string birthday = 4;
}

message SignInRequest {
  SignInPayload payload = 1;
}


message SignUpRequest {
  SignUpPayload payload = 1;
}

message Response {
  bytes data = 1;
  int64 code = 2;
  string message = 3;
}

service Auth {
  rpc SignIn(SignInRequest) returns (Response);
  rpc SignUp(SignUpRequest) returns (Response);
}
